# Final_Project

./: Cargo.toml  README.md  premier_league.csv
data/: competition_type.csv
data_processing/: clean_data.py  model.py  s3_functions.py
src/: lib.rs  main.rs
tests/: cli.rs
