[package]
name = "final_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4"
reqwest = {version="0.11.14", features = ["json", "blocking"] }
json= "*"
select = "0.6"
securestore = "0.100.0"
aws-sdk-s3 = "0.26.0"
aws-config = "0.55.1"
xmlparser = "0.13.5"
plotters = "0.3.0"
bytestream = "0.4.1"
polars = "0.28.0"